fix: list delete